modules/cli/src/test/resources/good/syntax/disamb/imports/Import04.scr
module good.syntax.disamb.imports.Import04;


import good.syntax.disamb.imports.pack1.Import04b as Bar;


global protocol Foo(role A, role B)
{
	do Bar.Proto2(A, B);
}

