modules/cli/src/test/resources/bad/syntax/disamb/modules/Modules04c.scr
module bad.syntax.disamb.modules.Modules04c;


import bad.syntax.disamb.modules.pack1.Foo1 as Modules04c;


global protocol Proto(role A, role B)
{
	1() from A to B;
	do Modules04c.Proto(A, B);
}
